fixed invisible buttons

--- a/static/styles.css
+++ b/static/styles.css
@@ -228,6 +228,7 @@ body {
 
 .hidden {
     opacity: 0;
+    visibility: hidden;
 }
 
 .pic-img {
